--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -7,10 +7,10 @@
 
 
 {% block masthead %}
-<h1>Elevate Thunderbird, <div class="txt-gradient">Do More</div></h1>
-<p>Add powerful cloud capabilities to Thunderbird and fund development of the always free and open source apps you love by subscribing to Pro.</p>
+<h1>{{ _('Elevate Thunderbird,') }} <div class="txt-gradient">{{ _('Do More') }}</div></h1>
+<p>{{ _('Add powerful cloud capabilities to Thunderbird and fund development of the always free and open source apps you love by subscribing to Pro.') }}</p>
 
-{{ right_arrow_cta_button('Join Waitlist', '', 'cta-button') }}
+{{ right_arrow_cta_button(_('Join Waitlist'), '', 'cta-button') }}
 
 <div class="hero-image tbpro"></div>
 {% endblock %}
@@ -27,15 +27,17 @@
           {{ svg_img('tbpro/icons/icon-thundermail') }}
         </span>
         <div class="app-header">
-          <span class="app-name">Thundermail</span>
-          <span class="app-tagline">Email Confidently</span>
+          <span class="app-name">{{ _('Thundermail') }}</span>
+          <span class="app-tagline">{{ _('Email Confidently') }}</span>
         </div>
       </div>
       <div class="card-body">
-        <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
+        <p>
+          {{ _('Send/receive emails with a privacy protecting host based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.') }}
+        </p>
       </div>
     </div>
-    <div class="card-image" role="img" aria-label="Thunderbird desktop client showing two contact cards."></div>
+    <div class="card-image" role="img" aria-label="{{ _('Thunderbird desktop client showing two contact cards.') }}"></div>
   </div>
   <div class="feature-card feature-card-2">
     <div class="card-info">
@@ -44,12 +46,14 @@
           {{ svg_img('tbpro/icons/icon-appointment') }}
         </span>
         <div class="app-header">
-          <span class="app-name">Appointment</span>
-          <span class="app-tagline">Schedule Easily</span>
+          <span class="app-name">{{ _('Appointment') }}</span>
+          <span class="app-tagline">{{ _('Schedule Easily') }}</span>
         </div>
       </div>
       <div class="card-body">
-        <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
+        <p>
+{{ _('Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.') }}
+        </p>
       </div>
     </div>
     <div class="card-image">
@@ -63,12 +67,14 @@
           {{ svg_img('tbpro/icons/icon-send') }}
         </span>
         <div class="app-header">
-          <span class="app-name">Send</span>
-          <span class="app-tagline">Attach Securely</span>
+          <span class="app-name">{{ _('Send') }}</span>
+          <span class="app-tagline">{{ _('Attach Securely') }}</span>
         </div>
       </div>
       <div class="card-body">
-        <p>Share large files with end-to-end encryption and fewer limits. Send provides a natural file attachment experience in Thunderbird Desktop and is compatible with any recipient’s inbox. Know your attachments will arrive safe and secure.</p>
+        <p>
+          Share large files with end-to-end encryption and fewer limits. Send provides a natural file attachment experience in Thunderbird Desktop and is compatible with any recipient’s inbox. Know your attachments will arrive safe and secure.
+        </p>
       </div>
     </div>
     <div class="card-image">
@@ -81,131 +87,43 @@
 
 
 {% block reasons %}
-<header>Made for You</header>
+<header>{{ _('Made for You') }}</header>
 <div class="reason">
   <div class="reason-content">
-    <h3 class="reason-title">Open Source</h3>
-    <p>The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting.</p>
+    <h3 class="reason-title">{{ _('Open Source') }}</h3>
+    <p>
+      {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting') }}
+    </p>
   </div>
 </div>
 <div class="reason">
   <div class="reason-content">
-    <h3 class="reason-title">User Focused</h3>
-    <p>Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.</p>
+    <h3 class="reason-title">{{ _('User Focused') }}</h3>
+    <p>
+      {{ _('Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.') }}
+    </p>
   </div>
 </div>
 <div class="reason">
   <div class="reason-content">
-    <h3 class="reason-title">Freedom Driven</h3>
-    <p>Money isn't our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.</p>
+    <h3 class="reason-title">{{ _('Freedom Driven') }}</h3>
+    <p>
+      {{ _('Money isn\'t our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.') }}
+    </p>
   </div>
 </div>
 {% endblock %}
 
-
-{% from 'includes/macros/carousel.html' import carousel_item, carousel_footer %}
-{% block testimonials %}
-<!-- Should *not* be width-constrained via .top-level or .primary-block -->
-  <div class="testimonials-background">
-    <section id="testimonials">
-      <header>What people are saying</header>
-      <div class="testimonials-slider">
-        <div class="testimonials-track">
-
-          {{ carousel_item('Even in beta, this new appointment service is easy to use and worth a look if your small business could benefit from online scheduling.', 'Fred Krueger', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus.', 'Jay Voorhees', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla.', 'M. Meyers', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Nullam rutrum. Nam vestibulum accumsan nisl. Donec hendrerit tempor tellus.', 'Pamela Voorhees', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Fusce suscipit, wisi nec facilisis facilisis, est dui fermentum leo, quis tempor ligula erat quis odio.', 'Lil\' Jay Voorhees', 'Contributing Writer, Website') }}
-
-        </div>
-      </div>
-
-      {{ carousel_footer() }}
-
-    </section>
-  </div>
-{% endblock %}
 
 {% block details %}
 <div class="subscription-header">
   <header>
-    Subscribe to Pro
+    {{ _('Subscribe to Pro') }}
   </header>
   <p>
-    Get Thundermail, Appointment, and Send in one simple subscription. You'll love the confidence, ease, and security these services add to Thunderbird. Thank you for supporting freedom.
+    {{ _('Get Thundermail, Appointment, and Send in one simple subscription. You\'ll love the confidence, ease, and security these services add to Thunderbird. Thank you for supporting freedom.') }}
   </p>
 </div>
 {% from 'includes/macros/subscription-plan.html' import subscription_plan %}
-{{ subscription_plan('Early Bird Plan', 'Our initial offering, ideal for most users', '00', 'per month, paid annually', 'Join Waitlist', '00', '000', '0', '00') }}
-{% endblock %}
-
-
-{% block faq %}
-<section id="faq" class="primary-block">
-  <header>Frequently Asked Questions</header>
-  <div class="faq-item-list">
-    <details class="faq-item">
-      <summary class="faq-question">
-        <span class="faq-question__text">
-          Vestibulum convallis, lorem a tempus semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus?
-        </span>
-      </summary>
-      <div class="faq-answer">
-        <p>
-          Aliquam erat volutpat.&nbsp;&nbsp;Nunc eleifend leo vitae magna.&nbsp;&nbsp;In id erat non orci commodo lobortis.&nbsp;&nbsp;Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.&nbsp;&nbsp;Sed diam.&nbsp;&nbsp;Praesent fermentum tempor tellus.&nbsp;&nbsp;Nullam tempus.&nbsp;&nbsp;Mauris ac felis vel velit tristique imperdiet.&nbsp;&nbsp;Donec at pede.&nbsp;&nbsp;Etiam vel neque nec dui dignissim bibendum.&nbsp;&nbsp;Vivamus id enim.&nbsp;&nbsp;Phasellus neque orci, porta a, aliquet quis, semper a, massa.&nbsp;&nbsp;Phasellus purus.&nbsp;&nbsp;Pellentesque tristique imperdiet tortor.&nbsp;&nbsp;Nam euismod tellus id erat.
-        </p>
-        <p>
-          Pellentesque dapibus suscipit ligula.&nbsp;&nbsp;Donec posuere augue in quam.&nbsp;&nbsp;Etiam vel tortor sodales tellus ultricies commodo.&nbsp;&nbsp;Suspendisse potenti.&nbsp;&nbsp;Aenean in sem ac leo mollis blandit.&nbsp;&nbsp;Donec neque quam, dignissim in, mollis nec, sagittis eu, wisi.&nbsp;&nbsp;Phasellus lacus.&nbsp;&nbsp;Etiam laoreet quam sed arcu.&nbsp;&nbsp;Phasellus at dui in ligula mollis ultricies.&nbsp;&nbsp;Integer placerat tristique nisl.&nbsp;&nbsp;Praesent augue.&nbsp;&nbsp;Fusce commodo.&nbsp;&nbsp;Vestibulum convallis, lorem a tempus semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus.&nbsp;&nbsp;Nullam libero mauris, consequat quis, varius et, dictum id, arcu.&nbsp;&nbsp;Mauris mollis tincidunt felis.&nbsp;&nbsp;Aliquam feugiat tellus ut neque.&nbsp;&nbsp;Nulla facilisis, risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc justo sit amet elit.
-        </p>
-      </div>
-    </details>
-
-    <details class="faq-item">
-      <summary class="faq-question">
-        <span class="faq-question__text">Phasellus at dui in ligula mollis ultricies?</span>
-      </summary>
-      <div class="faq-answer">
-        <p>
-          Aliquam erat volutpat.&nbsp;&nbsp;Nunc eleifend leo vitae magna.&nbsp;&nbsp;In id erat non orci commodo lobortis.&nbsp;&nbsp;Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.&nbsp;&nbsp;Sed diam.&nbsp;&nbsp;Praesent fermentum tempor tellus.&nbsp;&nbsp;Nullam tempus.&nbsp;&nbsp;Mauris ac felis vel velit tristique imperdiet.&nbsp;&nbsp;Donec at pede.&nbsp;&nbsp;Etiam vel neque nec dui dignissim bibendum.&nbsp;&nbsp;Vivamus id enim.&nbsp;&nbsp;Phasellus neque orci, porta a, aliquet quis, semper a, massa.&nbsp;&nbsp;Phasellus purus.&nbsp;&nbsp;Pellentesque tristique imperdiet tortor.&nbsp;&nbsp;Nam euismod tellus id erat.
-        </p>
-        <p>
-          Pellentesque dapibus suscipit ligula.&nbsp;&nbsp;Donec posuere augue in quam.&nbsp;&nbsp;Etiam vel tortor sodales tellus ultricies commodo.&nbsp;&nbsp;Suspendisse potenti.&nbsp;&nbsp;Aenean in sem ac leo mollis blandit.&nbsp;&nbsp;Donec neque quam, dignissim in, mollis nec, sagittis eu, wisi.&nbsp;&nbsp;Phasellus lacus.&nbsp;&nbsp;Etiam laoreet quam sed arcu.&nbsp;&nbsp;Phasellus at dui in ligula mollis ultricies.&nbsp;&nbsp;Integer placerat tristique nisl.&nbsp;&nbsp;Praesent augue.&nbsp;&nbsp;Fusce commodo.&nbsp;&nbsp;Vestibulum convallis, lorem a tempus semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus.&nbsp;&nbsp;Nullam libero mauris, consequat quis, varius et, dictum id, arcu.&nbsp;&nbsp;Mauris mollis tincidunt felis.&nbsp;&nbsp;Aliquam feugiat tellus ut neque.&nbsp;&nbsp;Nulla facilisis, risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc justo sit amet elit.
-        </p>
-      </div>
-    </details>
-
-    <details class="faq-item">
-      <summary class="faq-question">
-        <span class="faq-question__text">Praesent fermentum tempor tellus?</span>
-      </summary>
-      <div class="faq-answer">
-        <p>
-          Aliquam erat volutpat.&nbsp;&nbsp;Nunc eleifend leo vitae magna.&nbsp;&nbsp;In id erat non orci commodo lobortis.&nbsp;&nbsp;Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.&nbsp;&nbsp;Sed diam.&nbsp;&nbsp;Praesent fermentum tempor tellus.&nbsp;&nbsp;Nullam tempus.&nbsp;&nbsp;Mauris ac felis vel velit tristique imperdiet.&nbsp;&nbsp;Donec at pede.&nbsp;&nbsp;Etiam vel neque nec dui dignissim bibendum.&nbsp;&nbsp;Vivamus id enim.&nbsp;&nbsp;Phasellus neque orci, porta a, aliquet quis, semper a, massa.&nbsp;&nbsp;Phasellus purus.&nbsp;&nbsp;Pellentesque tristique imperdiet tortor.&nbsp;&nbsp;Nam euismod tellus id erat.
-        </p>
-        <p>
-          Pellentesque dapibus suscipit ligula.&nbsp;&nbsp;Donec posuere augue in quam.&nbsp;&nbsp;Etiam vel tortor sodales tellus ultricies commodo.&nbsp;&nbsp;Suspendisse potenti.&nbsp;&nbsp;Aenean in sem ac leo mollis blandit.&nbsp;&nbsp;Donec neque quam, dignissim in, mollis nec, sagittis eu, wisi.&nbsp;&nbsp;Phasellus lacus.&nbsp;&nbsp;Etiam laoreet quam sed arcu.&nbsp;&nbsp;Phasellus at dui in ligula mollis ultricies.&nbsp;&nbsp;Integer placerat tristique nisl.&nbsp;&nbsp;Praesent augue.&nbsp;&nbsp;Fusce commodo.&nbsp;&nbsp;Vestibulum convallis, lorem a tempus semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus.&nbsp;&nbsp;Nullam libero mauris, consequat quis, varius et, dictum id, arcu.&nbsp;&nbsp;Mauris mollis tincidunt felis.&nbsp;&nbsp;Aliquam feugiat tellus ut neque.&nbsp;&nbsp;Nulla facilisis, risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc justo sit amet elit.
-        </p>
-      </div>
-    </details>
-
-    <details class="faq-item">
-      <summary class="faq-question">
-        <span class="faq-question__text">Aliquam feugiat tellus ut neque?</span>
-      </summary>
-      <div class="faq-answer">
-        <p>
-          Aliquam erat volutpat.&nbsp;&nbsp;Nunc eleifend leo vitae magna.&nbsp;&nbsp;In id erat non orci commodo lobortis.&nbsp;&nbsp;Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.&nbsp;&nbsp;Sed diam.&nbsp;&nbsp;Praesent fermentum tempor tellus.&nbsp;&nbsp;Nullam tempus.&nbsp;&nbsp;Mauris ac felis vel velit tristique imperdiet.&nbsp;&nbsp;Donec at pede.&nbsp;&nbsp;Etiam vel neque nec dui dignissim bibendum.&nbsp;&nbsp;Vivamus id enim.&nbsp;&nbsp;Phasellus neque orci, porta a, aliquet quis, semper a, massa.&nbsp;&nbsp;Phasellus purus.&nbsp;&nbsp;Pellentesque tristique imperdiet tortor.&nbsp;&nbsp;Nam euismod tellus id erat.
-        </p>
-        <p>
-          Pellentesque dapibus suscipit ligula.&nbsp;&nbsp;Donec posuere augue in quam.&nbsp;&nbsp;Etiam vel tortor sodales tellus ultricies commodo.&nbsp;&nbsp;Suspendisse potenti.&nbsp;&nbsp;Aenean in sem ac leo mollis blandit.&nbsp;&nbsp;Donec neque quam, dignissim in, mollis nec, sagittis eu, wisi.&nbsp;&nbsp;Phasellus lacus.&nbsp;&nbsp;Etiam laoreet quam sed arcu.&nbsp;&nbsp;Phasellus at dui in ligula mollis ultricies.&nbsp;&nbsp;Integer placerat tristique nisl.&nbsp;&nbsp;Praesent augue.&nbsp;&nbsp;Fusce commodo.&nbsp;&nbsp;Vestibulum convallis, lorem a tempus semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus.&nbsp;&nbsp;Nullam libero mauris, consequat quis, varius et, dictum id, arcu.&nbsp;&nbsp;Mauris mollis tincidunt felis.&nbsp;&nbsp;Aliquam feugiat tellus ut neque.&nbsp;&nbsp;Nulla facilisis, risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc justo sit amet elit.
-        </p>
-      </div>
-    </details>
-  </div>
-</section>
+{{ subscription_plan(_('Early Bird Plan'), _('Our initial offering, ideal for most users'), '9', _('per month,<br>paid annually'), _('Join Waitlist'), '30', '300', '15', '3') }}
 {% endblock %}
